k8s-oci-cluster/apps/k8s-manifest-reviewer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-manifest-reviewer
  labels:
    app.kubernetes.io/name: k8s-manifest-reviewer
