k8s-oci-cluster/apps/k8s-manifest-reviewer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-manifest-reviewer
  namespace: k8s-manifest-reviewer
  labels:
    app.kubernetes.io/name: k8s-manifest-reviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-manifest-reviewer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-manifest-reviewer
    spec:
      enableServiceLinks: false
      containers:
        - name: app
          image: ghcr.io/maslankalm/k8s-manifest-reviewer:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 384Mi
