k8s-oci-cluster/apps/k8s-manifest-reviewer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-manifest-reviewer
  namespace: k8s-manifest-reviewer
  labels:
    app.kubernetes.io/name: k8s-manifest-reviewer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: k8s-manifest-reviewer
  ports:
    - name: http
      port: 8080
      targetPort: http
